# xmaster-cli

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  install.sh
.claude/tsc-cache/9f1510cf-88e2-47a6-8a6b-1fce881a42b5/: affected-repos.txt
.github/homebrew/: xmaster.rb.tmpl
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-03-30-discovered-posts-library.md
docs/x-algorithm-analysis/: 01-architecture-2026.md  README.md  growth-guide-2026.typ
scripts/: gen_transaction_id.py
skill/: SKILL.md
src/: browser_cookies.rs  cli.rs  config.rs  context.rs  errors.rs  main.rs  transaction_id.rs
src/commands/: agent_info.rs  amplifiers.rs  analyze.rs  article.rs  bookmarks_cmd.rs  config_cmd.rs  engage.rs  engage_inbox.rs  engage_recommend.rs  inspire.rs  lists.rs  metrics.rs  mod.rs  post.rs  quotes.rs  read_post.rs  replies.rs  report.rs  schedule.rs  search.rs  search_ai.rs  skill_cmd.rs  suggest.rs  thread.rs  timeline.rs  track.rs  tweet_engagement.rs  update.rs  user.rs
src/intel/: bookmarks.rs  mod.rs  preflight.rs  scheduler.rs  store.rs  tracker.rs
src/providers/: fxtwitter.rs  mod.rs  oauth2.rs  xai.rs  xapi.rs
tests/: cli_tests.rs
