[package]
name = "xmaster"
version = "1.6.5"
edition = "2021"
description = "Enterprise-grade X/Twitter CLI — post, reply, like, retweet, DM, search, and more"
license = "MIT"
repository = "https://github.com/paperfoot/xmaster-cli"
authors = ["Boris Djordjevic <boris@199biotechnologies.com>"]
keywords = ["twitter", "x", "cli", "social-media", "api"]
categories = ["command-line-utilities", "api-bindings"]

[[bin]]
name = "xmaster"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net", "io-util"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart", "stream"] }
reqwest-oauth1 = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
figment = { version = "0.10", features = ["toml", "env"] }
comfy-table = "7"
directories = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
url = "2"
hmac = "0.12"
sha1 = "0.10"
rand = "0.8"
percent-encoding = "2"
regex = "1"
toml = "0.8"
sha2 = "0.10"
urlencoding = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
aes = "0.8"
cbc = "0.1"
pbkdf2 = { version = "0.12", features = ["hmac"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
